--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "async-validator": "^1.10.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
   },
